注册UI的头像选区

--- a/MCDiary/Podfile
+++ b/MCDiary/Podfile
@@ -11,5 +11,7 @@ pod 'AVOSCloudDynamic'
 pod 'AVOSCloudIMDynamic'
 pod 'AVOSCloudCrashReportingDynamic'
 pod 'RegExCategories'
+pod 'RSKImageCropper'
+pod 'SVProgressHUD'
 
 
