--- a/MCDiary/Podfile
+++ b/MCDiary/Podfile
@@ -14,6 +14,7 @@ target :MCDiary do
   pod 'SVProgressHUD'
   pod 'DLRadioButton'
   pod 'DateTools'
+  pod 'TPKeyboardAvoiding'
 end
 
 target :MCDiaryKit do
