--- a/MCDiary/Podfile
+++ b/MCDiary/Podfile
@@ -15,6 +15,7 @@ target :MCDiary do
   pod 'DLRadioButton'
   pod 'DateTools'
   pod 'TPKeyboardAvoiding'
+  pod 'MMDrawerController'
 end
 
 target :MCDiaryKit do
