--- a/MCDiary/MCDiary/Classes/Supporting Files/Info.plist
+++ b/MCDiary/MCDiary/Classes/Supporting Files/Info.plist
@@ -25,7 +25,7 @@
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
 	<key>UIMainStoryboardFile</key>
-	<string>Message</string>
+	<string>Diary</string>
 	<key>UIRequiredDeviceCapabilities</key>
 	<array>
 		<string>armv7</string>
