--- a/MCDiary/Podfile
+++ b/MCDiary/Podfile
@@ -1,7 +1,7 @@
 platform :ios, '8.0'
 use_frameworks!
 
-pod 'ReactiveCocoa','2.5'
+pod 'ReactiveCocoa', '2.5'
 pod 'CocoaLumberjack', :inhibit_warnings => true
 pod 'HexColors'
 pod 'Masonry'
@@ -13,6 +13,7 @@ pod 'DateTools'
 pod 'TPKeyboardAvoiding'
 pod 'MMDrawerController'
 pod 'AVOSCloud'
-
+pod 'Fabric'
+pod 'Crashlytics'
 
 
